--- a/app/styles/catalog-dialog.scss
+++ b/app/styles/catalog-dialog.scss
@@ -1,26 +1,35 @@
 .catalog-dialog dialog {
     position: fixed;
-    top: 0px;
-    // transform: translate(0,calc(0% + 64px));
+    top: 20px;
+
+
     -ms-transform: translate(0, 64px);
     -webkit-transform: translate(0, 64px);
     -moz-transform: translate(0, 64px);
     transform: translate(0, 64px);
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
+
     height: auto;
     width: auto;
-    left: 240px;
+    left: 260px;
     right: calc(100% - 580px);
-    bottom: calc(0% + 64px);
+    bottom: calc(0% + 84px);
+
+
+
+
 }
 .is-small-screen .catalog-dialog dialog {
     position: fixed;
-    top: 0px;
-    transform: translate(0,  56px);
-    width: auto;
-    height: 40%;
+    top: 20px;
+
+
+    -ms-transform: translate(0, 56px);
+    -webkit-transform: translate(0, 56px);
+    -moz-transform: translate(0, 56px);
+    transform: translate(0, 56px);
+
+    width: 90%;
+    height: 50%;
     left: 0;
     right: 0;
     bottom: auto;
