--- a/app/styles/general.scss
+++ b/app/styles/general.scss
@@ -2,3 +2,7 @@
 ._dialog_overlay{
   z-index: 0 !important;
 }
+
+.column:last-child:not(:first-child), .columns:last-child:not(:first-child) {
+     float: left;
+}
