--- a/app/styles/catalog-dialog.scss
+++ b/app/styles/catalog-dialog.scss
@@ -1,15 +1,16 @@
 .catalog-dialog dialog {
     position: fixed;
-    top: 20px;
+
     -ms-transform: translate(0, 64px);
     -webkit-transform: translate(0, 64px);
     -moz-transform: translate(0, 64px);
     transform: translate(0, 64px);
-    height: auto;
+    height: 50%;
     width: auto;
+
+    top: 20px;
     left: 260px;
     right: calc(100% - 580px);
-    bottom: calc(0% + 84px);
 
     .search-button {
       position: absolute;
@@ -19,23 +20,45 @@
 }
 .is-small-screen .catalog-dialog dialog {
     position: fixed;
-    top: 20px;
+
     -ms-transform: translate(0, 56px);
     -webkit-transform: translate(0, 56px);
     -moz-transform: translate(0, 56px);
     transform: translate(0, 56px);
-    width: 90%;
-    height: 50%;
+
+
+    @media only screen and (min-width: 40em) {
+      top: 20px;
+      left:20px;
+      right: calc(100% - 360px);
+      bottom: auto;
+
+      width: auto;
+      height: 50%;
+
+      .search-button {
+        position: absolute;
+        top:10%;
+        right: -28px;
+      }
+
+    }
     @media only screen and (max-width: 40em) {
-        height: 80%;
+        left:20px;
+        right: 20px;
+
+    
+        height: 75%;
+
+        .search-button {
+          position: absolute;
+          top:auto;
+          bottom: -28px;
+          right: 28px;
+        }
+
     }
-    left: 0;
-    right: 0;
-    bottom: auto;
-    .search-button {
-      position: absolute;
-      top:auto;
-      bottom: -28px;
-      right: 28px;
-    }
+
+
+
 }
